tr(build) improve Jenkinsfile (#1289)
* make build works properly on ymci